@@ -27,7 +27,6 @@ import java.time.format.TextStyle;
 import java.util.Arrays;
 import java.util.Locale;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * This is {@link TimedMultifactorAuthenticationTrigger}.
@@ -84,8 +83,7 @@ public class TimedMultifactorAuthenticationTrigger implements MultifactorAuthent
         val now = LocalDateTime.now(ZoneId.systemDefault());
         val dow = DayOfWeek.from(now);
         val dayNamesForToday = Arrays.stream(TextStyle.values())
-            .map(style -> dow.getDisplayName(style, Locale.getDefault()))
-            .collect(Collectors.toList());
+            .map(style -> dow.getDisplayName(style, Locale.getDefault())).toList();
 
         val timed = timedMultifactor.stream()
             .filter(t -> {
