@@ -34,7 +34,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -115,7 +114,7 @@ public class DynamoDbTicketRegistryFacilitator {
             val result = this.amazonDynamoDBClient.scan(scan);
             LOGGER.debug("Scanned table with result [{}]", scan);
             tickets.addAll(result.items().stream()
-                .map(DynamoDbTicketRegistryFacilitator::deserializeTicket).collect(Collectors.toList()));
+                .map(DynamoDbTicketRegistryFacilitator::deserializeTicket).toList());
         });
         return tickets;
     }
